# ais-listener

./: .coveragerc  .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  README_TEMPLATE.md  build.sh  cloud-build.sh  cloudbuild.yaml  docker-compose.yml  main.py  pipeline.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run.sh
.github/workflows/: main.yml
ais_listener/: cli.py  handlers.py  main.py  packet.py  pipeline.py  receivers.py  stream.py  transmitters.py  version.py  writer.py
ais_listener/utils/: __init__.py  argparse.py  bigquery.py  logger.py  nmea.py  sources.py  sub_process.py
assets/: README.md  fishing_hours.schema.json
cloudbuild/: main.tf
cloudbuild/modules/cloudbuild-trigger/: main.tf  variables.tf
config/: TCP-client-kystverket.yaml  UDP-ais-in-thread.yaml  UDP-ais.yaml  UDP-in-thread.yaml  UDP-no-pubsub.yaml  UDP-pubsub-nmea-stream-dev.yaml  UDP-pubsub-nmea-stream-scratch.yaml  UDP-pubsub.yaml  UDP-server-ais.yaml  ip-client-mapping.yaml
examples/: check_duplicates.py  examples_chunked_nmea_it.py
k8s/prod/: deployment.yaml  loadbalancer.yaml  namespace.yaml
receiver/: stream.py  writer.py
requirements/: dev.txt
sample/: nmea.txt  sources.yaml
server/: server.py
socket_listener/: cli.py  handlers.py  health_server.py  monitor.py  packet.py  receivers.py  thread_monitor.py  transmitters.py  utils.py  version.py
socket_listener/assets/: __init__.py  ip-client-mapping.yaml
socket_listener/assets/sample_data/: mixed-nmea.txt  nmea.txt
socket_listener/sinks/: __init__.py  base.py  pubsub.py
socket_listener/utils/: __init__.py  logger.py
terraform/: backend.tf  dev.tfvars  receiver-vm.tf  resources.tf  variables.tf
terraform/modules/cloudbuild-trigger/: locals.tf  outputs.tf
tests/: conftest.py  test_cli.py  test_handlers.py  test_monitor.py  test_nmea.py  test_packet.py  test_receivers.py  test_sources.py  test_thread_monitor.py  test_transmitter.py  test_utils.py
tests/sinks/: test_google_pubsub.py
tests/utils/: test___init__.py  test_logger.py  test_yaml_load.py
util/: bigquery.py  nmea.py  sources.py
