[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

# Build system metadata.
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["socket_listener", "socket_listener.*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"assets" = ["*"]

[project]
name = "socket-listener"
version = "0.1.0"
description = "A service that receives messages through network sockets and publish them to desired destinations."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Paul Woods.", email = "paul@globalfishingwatch.org"},
    { name = "Tomás J. Link", email = "tomas.link@globalfishingwatch.org" },
]
maintainers = [
    { name = "Paul Woods.", email = "paul@globalfishingwatch.org"},
    { name = "Tomás J. Link", email = "tomas.link@globalfishingwatch.org" },
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">= 3.9"
dependencies = [
    "cloudpathlib[gs]~=0.20",
    "google-cloud-pubsub~=2.28",
    "pyyaml~=6.0",
    "rich~=13.9",
    "rich-argparse~=1.6",
]

[project.scripts]
socket-listener = "socket_listener.cli:main"

[project.urls]
Homepage = "https://github.com/GlobalFishingWatch/ais-listener"
